feat: add preact auto-code to docs

--- a/code/renderers/preact/tsconfig.json
+++ b/code/renderers/preact/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "strict": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "allowJs": true
   },
   "include": ["src/**/*", "template/**/*"]
 }
